@@ -13,14 +13,8 @@ module Spec
         @args = args
         @constraints_block = block
         
-        if [:any_args] == args
+        if ArgumentConstraints::AnyArgsConstraint === args.first
           @expected_args = nil
-          warn_constraint_symbol_deprecated(:any_args.inspect, "any_args()")
-        elsif ArgumentConstraints::AnyArgsConstraint === args.first
-          @expected_args = nil
-        elsif [:no_args] == args
-          @expected_args = []
-          warn_constraint_symbol_deprecated(:no_args.inspect, "no_args()")
         elsif ArgumentConstraints::NoArgsConstraint === args.first
           @expected_args = []
         else
@@ -33,20 +27,6 @@ module Spec
       end
       
       def constraint_for(arg)
-        if [:anything, :numeric, :boolean, :string].include?(arg)
-          case arg
-          when :anything
-            instead = "anything()"
-          when :boolean
-            instead = "boolean()"
-          when :numeric
-            instead = "an_instance_of(Numeric)"
-          when :string
-            instead = "an_instance_of(String)"
-          end
-          warn_constraint_symbol_deprecated(arg.inspect, instead)
-          return @@constraint_classes[arg].new(arg)
-        end
         return ArgumentConstraints::MatcherConstraint.new(arg) if is_matcher?(arg)
         return ArgumentConstraints::RegexpArgConstraint.new(arg) if arg.is_a?(Regexp)
         return ArgumentConstraints::EqualityProxy.new(arg)
